--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link sizes="16x16" rel="icon" type="image/ico" href="../src/images/address_book.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+  <link type="image/png" sizes="16x16" rel="icon" href="https://img.icons8.com/cute-clipart/64/000000/book.png">
   <title>Phonebook</title>
+  
 </head>
 
 <body>
